--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -4,23 +4,23 @@
 #============ Android Local Mobile ===================#
 appium_host=http://127.0.0.1:4723/wd/hub
 
-#capabilities.automationName=UiAutomator2
-#capabilities.deviceName=BLU_G5
-#capabilities.udid=5010018020002351
-#capabilities.deviceType=phone
-#capabilities.platformName=ANDROID
-#capabilities.platformVersion=9.0
-#capabilities.noReset=true
-#capabilities.newCommandTimeout=360
-#capabilities.app=/mobile/test.apk
+capabilities.automationName=UiAutomator2
+capabilities.deviceName=Pixel
+capabilities.udid=emulator-5554
+capabilities.deviceType=phone
+capabilities.platformName=ANDROID
+capabilities.platformVersion=12.0
+capabilities.noReset=true
+capabilities.newCommandTimeout=360
+capabilities.app=/mobile/demo.apk
 
 #=====================================================#
 
 #======== Local Run for iOS Mobile ===============#
-capabilities.platformName=iOS
-capabilities.deviceName=iPhone 12 Pro
-capabilities.automationName=XCUITEST
-capabilities.app=/mobile/DemoTest.app
-capabilities.newCommandTimeout=360
-capabilities.noReset=false
+#capabilities.platformName=iOS
+#capabilities.deviceName=iPhone 12 Pro
+#capabilities.automationName=XCUITEST
+#capabilities.app=/mobile/DemoTest.app
+#capabilities.newCommandTimeout=360
+#capabilities.noReset=false
 #=====================================================#
